--- a/index.html
+++ b/index.html
@@ -1,4 +1,47 @@
 <html>
-  <head></head>
-  <body></body>
+  <head>
+    <title>Tags HTML</title>
+  </head>
+  <body>
+    <!-- Elemento de Topo -->
+   <div id="header">
+      <img src="src/images/logo-nav.png" width="200px">
+      <h3>Restic36 - Cursos em TI</h3>
+   </div>
+
+   <div id="content">
+    <div id="description">
+      <p>No coração da inovação baiana, com uma abordagem única e focada na prática, nosso projeto de residência tecnológica oferece não apenas conhecimento teórico, mas também experiências reais. Nossa missão é clara: fortalecer a força de trabalho de TIC na Bahia, promovendo o empreendedorismo e a inovação. Venha fazer parte dessa jornada e elevar sua carreira para novos patamares!</p>
+ 
+      <a href="https://restic36.cepedi.org.br/">Clique aqui</a> e visite nosso site!
+    </div>
+    <h5>Lista de Cursos </h5>
+    <b>Full-Stack</b>
+      <p>Construa o futuro da web! Aprenda a desenvolver aplicações completas, 
+        desde o front-end até o back-end, com nossa trilha Full-stack. Seja o arquiteto do digital!</p>
+
+      <b>Ciência de Dados</b>
+      <p>Desvende os segredos dos dados! Aprenda a extrair insights valiosos, desenvolver modelos preditivos e impulsionar decisões inteligentes com nossa trilha de Ciência de Dados.</p>
+
+      <b>Front-end e UX/UI</b>
+      <p>Dê vida às suas ideias! Domine as técnicas de design de interface e desenvolvimento front-end para criar experiências digitais incríveis. Explore nossa trilha Front-end e UX/UI agora!</p>
+
+      <b>Mobile</b>
+      <p>Empodere-se para o mundo móvel! Desenvolva habilidades para criar aplicativos inovadores que acompanhem o ritmo do estilo de vida atual. Junte-se à nossa trilha de desenvolvimento Mobile.</p>
+
+      <b>Teste</b>
+      <p>Garanta a qualidade em cada linha de código! Descubra as melhores práticas de teste de software e torne-se um especialista em garantia de qualidade com nossa trilha de Teste.</p>
+
+      <b>Cloud</b>
+      <p>Alcance as alturas da computação em nuvem! Aprenda a utilizar plataformas de nuvem líderes do setor e aproveite todo o poder da escalabilidade e da flexibilidade. Explore nossa trilha Cloud hoje mesmo!</p>
+
+      <b>Back-end</b>
+      <p>Fortaleça a espinha dorsal da tecnologia! Aprofunde-se nas linguagens e frameworks essenciais para o desenvolvimento de servidores e bancos de dados. Participe de nossa trilha Back-end e construa a base para o futuro digital.</p>   
+   </div>
+
+   <div id="footer">
+      <h6>Todos os direitos reservador para Restic36</h6>
+   </div>
+  </body>
 </html>
+
