Last changes on branch

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <link rel="stylesheet" type="text/css" href="estilo.css">
   <title>Tags HTML</title>
 </head>
 
@@ -94,7 +95,7 @@
       <form action="form_submit" method="post">
         <fieldset>
           <legend>Dados Pessoais</legend>
-          <div class="linha_formulario">
+          <div class="linha_formulario" style="background-color: blueviolet;">
             <label>Nome</label>
             <input type="text" name="name" placeholder="Ex.:João Silva" />
           </div>
@@ -129,18 +130,10 @@
 
   </div>
 
-
-
-
-
-
-
-
-
-
   <div id="footer">
     <h6>Todos os direitos reservador para Restic36</h6>
   </div>
 </body>
+
 
 </html>
