--- a/index.html
+++ b/index.html
@@ -8,124 +8,102 @@
 <body>
   <!-- Elemento de Topo -->
   <header>
-    <img src="src/images/logo-nav.png" width="200px">
-    <h3>Restic36 - Cursos em TI</h3>
+    <img src="src/images/logo-nav.png">
   </header>
 
   <div id="content">
     <div id="description">
-      No coração da inovação baiana, com uma abordagem única e focada na prática, nosso projeto de residência
-      tecnológica oferece não apenas conhecimento teórico, mas também experiências reais. Nossa missão é clara:
-      fortalecer a força de trabalho de TIC na Bahia, promovendo o empreendedorismo e a inovação. Venha fazer parte
-      dessa jornada e elevar sua carreira para novos patamares!
+      <img src="src/images/painel.png" width="300" height="300">
+      <div class="card_principal">
+        <p class="titulo">Seja bem-vindo</p>
+        <p class="texto-normal">No coração da inovação baiana, com uma abordagem única e focada na prática, nosso
+          projeto de residência
+          tecnológica oferece não apenas conhecimento teórico, mas também experiências reais. Nossa missão é clara:
+          fortalecer a força de trabalho de TIC na Bahia, promovendo o empreendedorismo e a inovação. Venha fazer parte
+          dessa jornada e elevar sua carreira para novos patamares!
+        </p>
+      </div>
       <br><br>
-
-      <a href="https://restic36.cepedi.org.br/">Clique aqui</a> e visite nosso site!
-
-      <p>Vantagens dos nossos cursos</p>
-      <ul>
-        <li> Professores capacitados </li>
-        <li> Conteúdo atualizado </li>
-        <li> Aulas síncronas (remotas) </li>
-        <li> Material de leitura, atividades e material complementar </li>
-      </ul>
     </div>
+    <p class="titulo">Conheça nossos cursos.</p>
     <div id="cursos">
-      <p>Conheça nossos cursos.</p>
-      <table>
-        <thead>
-          <th style="width: 100px;">Curso</th>
-          <th>Descrição</th>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Full-Stack</td>
-            <td>Construa o futuro da web! Aprenda a desenvolver aplicações completas,
-              desde o front-end até o back-end, com nossa trilha Full-stack. Seja o arquiteto do digital!</td>
-          </tr>
-          <tr class="par">
-            <td>Ciência de Dados</td>
-            <td>
-              Desvende os segredos dos dados! Aprenda a extrair insights valiosos, desenvolver modelos preditivos e
-              impulsionar
-              decisões inteligentes com nossa trilha de Ciência de Dados.
-            </td>
-          </tr>
-          <tr>
-            <td>Front-end e UX/UI</td>
-            <td>
-              Dê vida às suas ideias! Domine as técnicas de design de interface e desenvolvimento front-end para criar
-              experiências digitais incríveis. Explore nossa trilha Front-end e UX/UI agora!
-            </td>
-          </tr>
-          <tr class="par">
-            <td>Mobile</td>
-            <td>
-              Empodere-se para o mundo móvel! Desenvolva habilidades para criar aplicativos inovadores que acompanhem o
-              ritmo
-              do estilo de vida atual. Junte-se à nossa trilha de desenvolvimento Mobile.</td>
-          </tr>
-          <tr>
-            <td>Teste</td>
-            <td>
-              Garanta a qualidade em cada linha de código! Descubra as melhores práticas de teste de software e
-              torne-se um
-              especialista em garantia de qualidade com nossa trilha de Teste. </td>
-          </tr>
-          <tr class="par">
-            <td>Cloud</td>
-            <td>
-              Alcance as alturas da computação em nuvem! Aprenda a utilizar plataformas de nuvem líderes do setor e
-              aproveite
-              todo o poder da escalabilidade e da flexibilidade. Explore nossa trilha Cloud hoje mesmo!
-            </td>
-          </tr>
-          <tr>
-            <td>Back-end</td>
-            <td>
-              Fortaleça a espinha dorsal da tecnologia! Aprofunde-se nas linguagens e frameworks essenciais para o
-              desenvolvimento de servidores e bancos de dados. Participe de nossa trilha Back-end e construa a base para
-              o
-              futuro digital.
-            </td>
-          </tr>
-        </tbody>
-      </table>
+
+      <div class="card_curso">
+      <a href="#" class='card-link'></a>
+        <div class="card_img">
+          <img src="src/images/card-fullstack.png" width="400px" />
+        </div>
+        <div class="card_texto">
+          <p class="titulo">Full-Stack</p>
+          <p class="card_descricao">Construa o futuro da web! Aprenda a desenvolver aplicações completas,
+            desde o front-end até o back-end, com nossa trilha Full-stack. Seja o arquiteto do digital!</p>
+        </div>
+      </div>
+
+      <div class="card_curso">
+      <a href="#" class='card-link'></a>
+        <div class="card_img">
+          <img src="src/images/card-dados.png" width="400px" />
+        </div>
+        <div class="card_texto">
+          <p class="titulo">Ciência de Dados</p>
+          <p class="card_descricao">Desvende os segredos dos dados! Aprenda a extrair insights valiosos, desenvolver
+            modelos preditivos e
+            impulsionar
+            decisões inteligentes com nossa trilha de Ciência de Dados.</p>
+        </div>
+      </div>
+
+      <div class="card_curso">
+      <a href="#" class='card-link'></a>
+        <div class="card_img">
+          <img src="src/images/card-frontend.png" width="400px" />
+        </div>
+        <div class="card_texto">
+          <p class="titulo">Front-end e UX/UI</p>
+          <p class="card_descricao">Dê vida às suas ideias! Domine as técnicas de design de interface e desenvolvimento
+            front-end para criar
+            experiências digitais incríveis. Explore nossa trilha Front-end e UX/UI agora!</p>
+        </div>
+      </div>
     </div>
 
     <div id="formulario">
-      <p>Inscreva-se no formulário abaixo para entrarmos em contato</p>
+      <p class="titulo">Inscreva-se no formulário abaixo para entrarmos em contato</p>
       <form action="form_submit" method="post">
 
         <div class="linha_formulario">
-          <label>Nome</label>
+          <label class="form_label">Nome</label>
           <input type="text" name="name" placeholder="Ex.:João Silva" />
         </div>
         <br>
         <div class="linha_formulario">
-          <label>Telefone</label>
+          <label class="form_label">Telefone</label>
           <input type="tel" name="telefone" placeholder="(XX) XXXX-XXXX" />
         </div>
         <br>
         <div class="linha_formulario">
-          <label>Email</label>
+          <label class="form_label">Email</label>
           <input type="email" name="email" placeholder="joao@mail.com" />
         </div>
         <br>
         <div class="linha_formulario">
-          <label>Perfil</label>
+          <label class="form_label">Perfil</label>
           <select name="perfil">
             <option value="aluno">Aluno</option>
             <option value="tutor">Tutor</option>
           </select>
         </div>
         <div class="linha_formulario">
-          <label>Comentário (opcional)</label>
+          <label class="form_label">Comentário (opcional)</label>
           <br>
-          <textarea name="comentario" placeholder="Escreva aqui algum comentário adicional"></textarea>
+          <textarea class="form_label" name="comentario"
+            placeholder="Escreva aqui algum comentário adicional"></textarea>
         </div>
-
-        <input type="submit" value="Enviar" />
+        <div class="linha_formulario">
+          <div></div>
+          <input class="form_button" type="submit" value="Enviar" />
+        </div>
 
       </form>
     </div>
