--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="estilo.css" />
-  <title>Tags HTML</title>
+  <title>Curso Restic36</title>
 </head>
 
 <body>
