--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="estilo.css" />
   <title>Curso Restic36</title>
 </head>
@@ -29,9 +30,9 @@
     <div id="cursos">
 
       <div class="card_curso">
-      <a href="#" class='card-link'></a>
+        <a href="#" class='card-link'></a>
         <div class="card_img">
-          <img src="src/images/card-fullstack.png" width="400px" />
+          <img class="image_card" src="src/images/card-fullstack.png"/>
         </div>
         <div class="card_texto">
           <p class="titulo">Full-Stack</p>
@@ -41,9 +42,9 @@
       </div>
 
       <div class="card_curso">
-      <a href="#" class='card-link'></a>
+        <a href="#" class='card-link'></a>
         <div class="card_img">
-          <img src="src/images/card-dados.png" width="400px" />
+          <img class="image_card" src="src/images/card-dados.png"/>
         </div>
         <div class="card_texto">
           <p class="titulo">Ciência de Dados</p>
@@ -55,9 +56,9 @@
       </div>
 
       <div class="card_curso">
-      <a href="#" class='card-link'></a>
+        <a href="#" class='card-link'></a>
         <div class="card_img">
-          <img src="src/images/card-frontend.png" width="400px" />
+          <img src="src/images/card-frontend.png"/>
         </div>
         <div class="card_texto">
           <p class="titulo">Front-end e UX/UI</p>
@@ -113,6 +114,7 @@
   <div id="footer">
     <h6>Todos os direitos reservador para Restic36</h6>
   </div>
+  <script src="script.js"></script>
 </body>
 
 </html>
