Ajustes e atualizações do README

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="description">
       <img src="src/images/painel.png" width="300" height="300">
       <div class="card_principal">
-        <p class="titulo">Seja bem-vindo</p>
+        <p id="username" class="titulo">Seja bem-vindo</p>
         <p class="texto-normal">No coração da inovação baiana, com uma abordagem única e focada na prática, nosso
           projeto de residência
           tecnológica oferece não apenas conhecimento teórico, mas também experiências reais. Nossa missão é clara:
